# stitching

./: .gitignore  Cargo.toml  Cross.toml  README.md  cams.toml  live.toml  prod.toml  run.nu  shell.nix
.cargo/: config.toml
argus/: Cargo.toml
argus-sys/: Cargo.toml  build.rs  wrapper.hpp
argus-sys/src/: lib.rs  uuid_enums.rs  vtables.rs
argus-sys/src/bind/: generated.rs
argus/src/: lib.rs  uuid_enums.rs
cam-loader/: Cargo.toml
cam-loader/src/: buf.rs  lib.rs  loader.rs  util.rs
cam-loader/src/adapter/: argus.rs  image.rs  mod.rs  pattern.rs  v4l.rs
cpp-interop/src/: container.rs  lib.rs
docs/casa-docs/: book.toml
docs/casa-docs/src/: SUMMARY.md  introduction.md
docs/casa-docs/src/files/: casa.service  extlinux.conf  hostapd.conf  setup-hotspot-ip.sh  tegra234-p3767-camera-p3768-imx219-dual-seeed.dtbo
docs/casa-docs/src/setup/: hardware_setup.md  index.md  software_setup.md
docs/casa-docs/src/software/: architecture.md  dev_usage.md  docs.md  index.md  prereqs.md
docs/casa-docs/src/usage/: configuration.md  connecting.md  index.md  service.md  user_interface.md
scripts/upload-runner/: go.mod  go.sum  main.go
smpgpu/: Cargo.toml
smpgpu/src/: bind.rs  buffer.rs  bufs.rs  cmd.rs  ctx.rs  global.rs  lib.rs  mem.rs  model.rs  sampler.rs  shader.rs  texture.rs  typed_buffer.rs
smpgpu/src/buffer/: typed.rs
smpgpu/src/cmd/: compute.rs  mod.rs  render.rs
src/: camera.rs  config.rs  lib.rs  main.rs
src/grad/: mod.rs
stitch/: Cargo.toml
stitch/src/: buf.rs  camera.rs  config.rs  frame.rs  lib.rs  loader.rs  sync_frame.rs  util.rs
stitch/src/camera/: group.rs  img.rs  live.rs  mod.rs  proj.rs  util.rs
stitch/src/camera/live/: argus_conv.rs  mmap_v4l.rs  pattern.rs
stitch/src/grad/: edges.rs  mod.rs
stitch/src/proj/: cpu.rs  gpu.rs  mod.rs  render.rs  render_gpu copy.rs  render_gpu.rs  util.rs
stitch/src/proj/shaders/: bounds.wgsl  compute.wgsl  model.wgsl  project.wgsl  render copy.wgsl  render.wgsl
stitching_cli/: Cargo.toml
stitching_cli/src/: main.rs
stitching_server/: Cargo.toml  README.md
stitching_server/assets/: index.html  qoi.js  style.css
stitching_server/src/: app.rs  infer_host.rs  log.rs  main.rs  routes.rs  util.rs
stitching_server/src/app/: proto.rs  stitcher.rs  video.rs
stitching_server/static/: style.css
tensorrt/: Cargo.toml
tensorrt-sys/: Cargo.toml  build.rs  infer_syms.txt  wrapper.hpp
tensorrt-sys/src/: lib.rs  onnx.rs  vtables.rs
tensorrt-sys/src/bind/: generated.rs
tensorrt-sys/trt-include-12.6/: NvInferImpl.h  NvInferPlugin.h  NvInferPluginBase.h  NvInferPluginUtils.h  NvInferRuntime.h  NvOnnxConfig.h  NvOnnxParser.h
tensorrt/src/: cuda.rs  lib.rs  log.rs  nets.rs  onnx.rs  rt.rs
trt-yolo/: Cargo.toml
trt-yolo/src/: boxes.rs  coco.rs  lib.rs  main.rs
