[package]
name = "stitching"
version = "0.1.0"
edition = "2021"

[features]
default = ["raylib"]
raylib = ["dep:raylib"]

[dependencies]
gif = "0.13.1"
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
    "rayon",
] }
notify = { version = "6.1.1", default-features = false }
raylib = { version = "5.0.2", optional = true }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
toml = "0.8.19"

[profile.release]
lto = "thin"
