[workspace]
members = [ "argus", "argus-sys", "cpp-interop",
    "smpgpu",
    "stitch",
    "stitching_server",
    "tensorrt",
    "tensorrt-sys",
    "trt-yolo",
]
resolver = "2"

[workspace.dependencies]
bindgen = { version = "0.71.1", default-features = false, features = ["runtime"] }
futures = { version = "0.3.31", default-features = false }
glam = { version = "0.29.2" }
image = { version = "0.25.4", default-features = false, features = ["png"] }
kanal = "0.1.0-pre8"
thiserror = "2.0.11"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "sync"] }
tracing = { version = "0.1.40", default-features = false }

[profile.dev]
debug = false
incremental = true

[profile.release]
lto = false
incremental = true
