[package]
name = "cam-loader"
version = "0.1.0"
edition = "2024"

[features]
v4l = ["dep:v4l", "dep:mozjpeg"]
argus = ["dep:argus"]
image = ["dep:image"]

[dependencies]
futures.workspace = true
kanal.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
v4l = { version = "0.14.0", optional = true }
argus = { path = "../argus", optional = true }
zerocopy = "0.8.23"
mozjpeg = { version = "0.10.12", optional = true }
image = { workspace = true, default-features = false, features = [
    "png",
], optional = true }
