[package]
name = "stitch"
version = "0.1.0"
edition = "2021"

[features]
default = ["toml-cfg", "tokio", "live", "gpu"]
toml-cfg = ["dep:toml"]
tokio = ["dep:tokio", "smpgpu/tokio_task_poller"]
live = ["dep:zerocopy", "tokio", "tokio/rt"]
gpu = ["dep:smpgpu", "dep:glam"]
obj-file = ["smpgpu/obj-file"]
v4l = ["dep:v4l"]

[dependencies]
encase = { version = "0.10.0", features = ["glam"] }
futures.workspace = true
glam = { version = "0.29.2", optional = true }
image.workspace = true
kanal.workspace = true
mozjpeg = "0.10.12"
# nokhwa = { workspace = true, optional = true }
serde = { version = "1.0.214", features = ["derive"] }
smpgpu = { path = "../smpgpu", optional = true }
thiserror = "1.0.67"
tokio = { workspace = true, optional = true, features = ["sync"] }
toml = { version = "0.8.19", optional = true }
tracing.workspace = true
v4l = { version = "0.14.0", optional = true }

zerocopy = { version = "0.8.9", optional = true, features = [
    "alloc",
    "derive",
] }
