[package]
name = "stitch"
version = "0.1.0"
edition = "2024"

[features]
default = ["toml-cfg", "gpu"]
toml-cfg = ["dep:toml"]
gpu = ["dep:smpgpu", "dep:glam"]
obj-file = ["smpgpu/obj-file"]
v4l = ["cam-loader/v4l"]
argus = ["cam-loader/argus"]

[dependencies]
cam-loader = { version = "0.1.0", path = "../cam-loader" }
encase = { version = "0.10.0", features = ["glam"] }
glam = { workspace = true, optional = true }
image.workspace = true
kanal.workspace = true
serde = { workspace = true, features = ["derive"] }
smpgpu = { path = "../smpgpu", optional = true, features = [
    "tokio_task_poller",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
toml = { version = "0.8.19", optional = true, default-features = false, features = [
    "parse",
] }
tracing.workspace = true

zerocopy = { version = "0.8.9", features = ["alloc", "derive"] }
