[package]
name = "stitching_cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["raylib", "gif", "live"]
raylib = ["dep:raylib"]
gif = ["dep:gif"]
live = ["stitch/live"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
gif = { version = "0.13.1", optional = true }
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
    "rayon",
] }
raylib = { version = "5.0.2", optional = true }
stitch = { path = "../stitch", default-features = false, features = [
    "toml-cfg",
    "watch",
] }
