[package]
name = "stitching_server"
version = "0.1.0"
edition = "2021"

[features]
default = []
capture = ["dep:image"]

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.8.1", default-features = false, features = [
    "http1",
    "matched-path",
    "tokio",
    "tracing",
    "ws",
] }
bytemuck = "1.21.0"
clap = { version = "4.5.20", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
] }
futures-util = "0.3.31"
half = "2.4.1"
glam.workspace = true
image = { workspace = true, optional = true }
kanal.workspace = true
tensorrt = { version = "0.1.0", path = "../tensorrt", features = ["tracing"] }
thiserror.workspace = true
tokio = { workspace = true }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "registry"] }
trt-yolo = { version = "0.1.0", path = "../trt-yolo" }
zerocopy = { version = "0.8.9", features = ["alloc"] }
flate2 = "1.0.35"

[dependencies.stitch]
path = "../stitch"
default-features = false
features = ["toml-cfg", "live", "gpu", "obj-file"]
