[package]
name = "stitching_server"
version = "0.1.0"
edition = "2024"

[features]
default = []
trt = ["dep:trt-yolo"]
video = ["stitch/v4l", "stitch/argus"]
image = ["cam-loader/image"]
jetson = ["trt", "video"]

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.8.1", default-features = false, features = [
    "http1",
    "matched-path",
    "tokio",
    "tracing",
    "ws",
] }
bytemuck = "1.21.0"
clap = { version = "4.5.20", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
] }
futures-util = "0.3.31"
half = "2.4.1"
glam.workspace = true
image.workspace = true
kanal.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "env-filter",
    "registry",
] }
trt-yolo = { version = "0.1.0", path = "../trt-yolo", features = [
    "tracing",
], optional = true }
# tensorrt = { version = "0.1.0", path = "../tensorrt", features = [
#     "tracing",
# ], optional = true }
zerocopy = { version = "0.8.9", features = ["alloc"] }
flate2 = { version = "1.0.35", default-features = false, features = [
    "zlib-rs",
] }
cam-loader = { version = "0.1.0", path = "../cam-loader" }
qoi = "0.4.1"
chrono = "0.4.40"
serde.workspace = true
toml = "0.8.20"

[dependencies.stitch]
path = "../stitch"
default-features = false
features = ["toml-cfg", "gpu", "obj-file"]
