[package]
name = "tensorrt"
version = "0.1.0"
edition = "2021"

[features]
tracing = ["dep:tracing"]

[dependencies]
clap = { version = "4.5.23", default-features = false, features = [
    "derive",
    "std",
] }
tensorrt-sys = { path = "../tensorrt-sys" }
tracing = { workspace = true, optional = true }
