[package]
name = "trt-yolo"
version = "0.1.0"
edition = "2021"

[features]
default = ["v11s"]
v11n = []
v11s = []
v11m = []
v11l = []
v11x = []

[dependencies]
tensorrt = { version = "0.1.0", path = "../tensorrt" }
half = { version = "2.4.1", features = ["bytemuck"] }
bytemuck = "1.21.0"
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
dirs = "6.0.0"

[build-dependencies]
tensorrt = { version = "0.1.0", path = "../tensorrt" }
